@@ -1,3 +1,6 @@
+  12 May 2020;  <chymera@gentoo.org> black-19.10_beta_p0.ebuild:
+  dev-python/black: improved test support
+
 *pypubsub-4.0.3 (18 Mar 2019)
 
   18 Mar 2019; Horea Christian <h.chr@mail.ru> +pypubsub-4.0.3.ebuild,
